--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
                 <artifactId>neo4j</artifactId>
                 <version>1.9</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-neo4j-rest</artifactId>
+                <version>2.2.1.RELEASE</version>
+            </dependency>
             <!-- TESTING -->
             <dependency>
                 <groupId>junit</groupId>
@@ -173,6 +178,10 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j-rest</artifactId>
         </dependency>
     </dependencies>
 
