Added integration tests.

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,31 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>int-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>integration-tests</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*IntTest.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <properties>
@@ -255,9 +280,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
                     <executions>
                         <execution>
                             <id>unit-tests</id>
@@ -266,23 +288,9 @@
                                 <goal>test</goal>
                             </goals>
                             <configuration>
-                                <skip>false</skip>
                                 <excludes>
                                     <exclude>**/*IntTest.java</exclude>
                                 </excludes>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>integration-tests</id>
-                            <phase>integration-test</phase>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                            <configuration>
-                                <skip>false</skip>
-                                <includes>
-                                    <include>**/*IntTest.java</include>
-                                </includes>
                             </configuration>
                         </execution>
                     </executions>
