--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.sksamuel.elasticsearch</groupId>
     <artifactId>elasticsearch-river-neo4j</artifactId>
     <packaging>jar</packaging>
-    <version>0.90.1.1</version>
+    <version>0.90.7.0</version>
     <name>elasticsearch-river-neo4j</name>
     <description>A river plugin for elastic search that offers an easy way to index neo4j graph databases</description>
     <url>https://github.com/sksamuel/elasticsearch-river-neo4j</url>
@@ -120,6 +120,7 @@
         <commons.logging.version>1.1.2</commons.logging.version>
         <commons.beanutils.version>1.8.3</commons.beanutils.version>
 
+        <elasticsearch.version>0.90.7</elasticsearch.version>
         <junit.version>4.11</junit.version>
 
         <log4j.version>1.2.17</log4j.version>
@@ -134,7 +135,7 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-neo4j-rest</artifactId>
-                <version>2.2.1.RELEASE</version>
+                <version>2.3.2.RELEASE</version>
             </dependency>
             <!-- TESTING -->
             <dependency>
@@ -168,7 +169,7 @@
             <dependency>
                 <groupId>org.elasticsearch</groupId>
                 <artifactId>elasticsearch</artifactId>
-                <version>0.90.1</version>
+                <version>${elasticsearch.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
