--- a/pom.xml
+++ b/pom.xml
@@ -126,16 +126,27 @@
         <log4j.version>1.2.17</log4j.version>
 
         <mockito.version>1.9.5</mockito.version>
-
+        <spring.neo4j.version>3.0.0.M1</spring.neo4j.version>
         <slf4j.version>1.6.6</slf4j.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>http://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-neo4j-rest</artifactId>
-                <version>2.3.2.RELEASE</version>
+                <version>${spring.neo4j.version}</version>
             </dependency>
             <!-- TESTING -->
             <dependency>
