--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <log4j.version>1.2.17</log4j.version>
 
         <mockito.version>1.9.5</mockito.version>
-        <spring.neo4j.version>3.0.0.M1</spring.neo4j.version>
+        <spring.neo4j.version>3.0.1.RELEASE</spring.neo4j.version>
         <slf4j.version>1.6.6</slf4j.version>
     </properties>
 
