--- a/pom.xml
+++ b/pom.xml
@@ -211,8 +211,6 @@
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
-                <!-- Copy dependencies into lib folder -->
-                <!-- To see full classpath use  mvn dependency:build-classpath -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -279,17 +277,16 @@
                         </execution>
                     </executions>
                 </plugin>
-                <!-- Generate the release zip file (run during package step) -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.3</version>
                     <configuration>
-                        <finalName>elasticsearch-${project.name}-${elasticsearch.version}</finalName>
+                        <finalName>${project.name}-${elasticsearch.version}</finalName>
                         <appendAssemblyId>false</appendAssemblyId>
                         <outputDirectory>${project.build.directory}/release/</outputDirectory>
                         <descriptors>
-                            <descriptor>src/assembly/release.xml</descriptor>
+                            <descriptor>src/main/assembly/release.xml</descriptor>
                         </descriptors>
                     </configuration>
                     <executions>
